[gd_scene load_steps=18 format=2]

[ext_resource path="res://textures/journal ui/metaphysical_screen.png" type="Texture" id=1]
[ext_resource path="res://fonts/Inkcalig.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/inventory_manager.gd" type="Script" id=3]
[ext_resource path="res://textures/mobius_eel.png" type="Texture" id=5]
[ext_resource path="res://objects/inventory_tile.tscn" type="PackedScene" id=6]
[ext_resource path="res://textures/journal ui/inventory_bg.png" type="Texture" id=7]
[ext_resource path="res://themes/v_slider.tres" type="Theme" id=9]
[ext_resource path="res://scripts/stickynotes.gd" type="Script" id=10]
[ext_resource path="res://textures/journal ui/stickynote_equipment_hover.png" type="Texture" id=11]
[ext_resource path="res://textures/journal ui/stickynote_pedia_hover.png" type="Texture" id=12]
[ext_resource path="res://textures/journal ui/stickynote_ritual_hover.png" type="Texture" id=13]
[ext_resource path="res://textures/journal ui/items_button_hover.png" type="Texture" id=14]
[ext_resource path="res://textures/journal ui/items_button.png" type="Texture" id=15]
[ext_resource path="res://textures/journal ui/fish_button_hover.png" type="Texture" id=16]
[ext_resource path="res://textures/journal ui/fish_button.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=3]
size = 95
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 39
outline_color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="translucent_bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.192157, 0.192157, 0.192157, 0.533333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 7 )

[node name="fish_btn" type="TextureButton" parent="."]
margin_left = 304.0
margin_top = 272.0
margin_right = 668.0
margin_bottom = 436.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )
texture_focused = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="items_btn" type="TextureButton" parent="."]
margin_left = 568.0
margin_top = 272.0
margin_right = 932.0
margin_bottom = 436.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inv_tile_button1" parent="." instance=ExtResource( 6 )]
margin_left = 268.0
margin_top = 400.0
margin_right = 468.0
margin_bottom = 600.0
rect_scale = Vector2( 0.8, 0.8 )
start_focused = true

[node name="inv_tile_button2" parent="." instance=ExtResource( 6 )]
margin_left = 468.0
margin_top = 400.0
margin_right = 668.0
margin_bottom = 600.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="inv_tile_button3" parent="." instance=ExtResource( 6 )]
margin_left = 668.0
margin_top = 400.0
margin_right = 868.0
margin_bottom = 600.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="inv_tile_button4" parent="." instance=ExtResource( 6 )]
margin_left = 268.0
margin_top = 600.0
margin_right = 468.0
margin_bottom = 800.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="inv_tile_button5" parent="." instance=ExtResource( 6 )]
margin_left = 468.0
margin_top = 600.0
margin_right = 668.0
margin_bottom = 800.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="inv_tile_button6" parent="." instance=ExtResource( 6 )]
margin_left = 668.0
margin_top = 600.0
margin_right = 868.0
margin_bottom = 800.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="inv_tile_button7" parent="." instance=ExtResource( 6 )]
margin_left = 268.0
margin_top = 800.0
margin_right = 468.0
margin_bottom = 1000.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="inv_tile_button8" parent="." instance=ExtResource( 6 )]
margin_left = 468.0
margin_top = 800.0
margin_right = 668.0
margin_bottom = 1000.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="inv_tile_button9" parent="." instance=ExtResource( 6 )]
margin_left = 668.0
margin_top = 800.0
margin_right = 868.0
margin_bottom = 1000.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="item_desc_bg" type="Sprite" parent="."]
modulate = Color( 0.858824, 0.858824, 0.858824, 1 )
position = Vector2( 1400, 625 )
scale = Vector2( 1, 1.05 )
texture = ExtResource( 1 )

[node name="item_name" type="RichTextLabel" parent="item_desc_bg"]
anchor_left = 0.113
anchor_right = 0.921
anchor_bottom = 0.154
margin_left = -339.891
margin_top = -380.0
margin_right = -333.443
margin_bottom = -385.984
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]ITEM/FISH NAME"
text = "ITEM/FISH NAME"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_sprite" type="Sprite" parent="item_desc_bg"]
position = Vector2( -10, -140 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="flavor_text" type="RichTextLabel" parent="item_desc_bg"]
margin_left = -330.0
margin_top = 90.0
margin_right = 328.0
margin_bottom = 313.0
theme = ExtResource( 9 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "this it the item description of the selected item. This very creepy/weird looking fish is scary, and it came from the deep!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Research_stickynote" type="TextureButton" parent="."]
margin_left = 539.0
margin_top = 15.0
margin_right = 854.0
margin_bottom = 226.0
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_focused = ExtResource( 12 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
ref_path = "res://scenes/Research.tscn"

[node name="Equipment_stickynote" type="TextureButton" parent="."]
margin_left = 1083.0
margin_top = 5.0
margin_right = 1378.0
margin_bottom = 214.0
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
texture_focused = ExtResource( 11 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
ref_path = "res://scenes/Equipment.tscn"

[node name="Rituals_stickynote" type="TextureButton" parent="."]
margin_left = 1423.0
margin_top = 1.0
margin_right = 1743.0
margin_bottom = 220.0
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
texture_focused = ExtResource( 13 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
ref_path = "res://scenes/Rituals.tscn"

[connection signal="pressed" from="fish_btn" to="." method="_on_fish_btn_pressed"]
[connection signal="pressed" from="items_btn" to="." method="_on_items_btn_pressed"]
